--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,8 +53,13 @@ jobs:
         with:
           categories: 'IaC'
 
+      - name: Upload results to Security tab
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: ${{ steps.msdo.outputs.sarifFile }}
+
   preview:
-    needs: [lint, validate]
+    needs: [scan-bicep-code]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
